--- a/cart.html
+++ b/cart.html
@@ -937,13 +937,63 @@
   <main class="position-relative">
 
     <!-- empty cart -->
-    <section class="mt-2 py-3">
+    <section class="mt-2 py-3 d-none">
       <div class="container">
         <div class="rounded-16 bg-white shadow-4 p-2 p-sm-4 pb-5 d-flex align-items-center justify-content-center">
           <div class="text-center w-100 my-5">
             <img alt="img" src="img/undraw_empty_cart_co35 1.png" class="img-fluid">
             <p class="font-bold text-main2 fs-32 mt-4 mb-2 fs-sm-24">محصولی در سبد خرید شما نیست !</p>
             <a class="text-second fs-20 font-bold">مشاهده محصولات</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row mx-0 g-4">
+          <div class="col-lg-9">
+            <div class="rounded-16 bg-white shadow-4 p-2 p-sm-4">
+
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="rounded-16 bg-white shadow-4 p-2 p-sm-4">
+              <p class="text-dark font-bold fs-18">خلاصه سبد استعلام شما</p>
+              <div class="mt-4 d-flex align-items-center justify-content-between gap-2 fw-bold text-gray">
+                <p class="mb-0 fs-14">جمع کل محصولات</p>
+                <p class="mb-0 font-bold">3,050,000</p>
+              </div>
+              <div class="mt-3 d-flex align-items-center justify-content-between gap-2 fw-bold text-gray">
+                <p class="mb-0 fs-14">ارزش افزوده محصولات</p>
+                <p class="mb-0 font-bold">274,500</p>
+              </div>
+              <div class="mt-4 text-success2 d-flex align-items-center justify-content-between gap-2 font-bold text-gray">
+                <p class="mb-0 ">جمع کل</p>
+                <div class="d-flex align-items-center gap-2">
+                  <p class="mb-0 fs-20">3,324,500</p>
+                  <div class="w-48 h-24 d-flex align-items-center justify-content-center bg-success2 fs-14 fw-bold text-white rounded-pill">تومان</div>
+                </div>
+              </div>
+              <form class="border-top border-4 mt-4 pt-4">
+               <div class="d-flex align-items-center justify-content-between gap-3 border rounded-8 p-3 mb-3">
+                 <input class="font-bold flex-grow-1 fs-14 border-0 outline-none" placeholder="نام و نام خانوادگی">
+                 <img alt="icon" src="img/svg/Icon (3).svg">
+                </div>
+                <div class="d-flex align-items-center justify-content-between gap-3 border rounded-8 p-3">
+                  <input class="font-bold flex-grow-1 fs-14 border-0 outline-none" placeholder="شماره همراه">
+                  <img alt="icon" src="img/svg/Icon (4).svg">
+                 </div>
+                 <button type="submit" class="border-0 mt-3 button-hover-2 w-100 h-56 rounded-8 bg-second text-white font-bold">
+                  <span>
+                    ثبت سفارش
+                  </span>
+                 </button>
+              </form>
+            </div>
+            <p class="mb-0 text-gray2 lh-lg font-bold fs-14 mt-3">
+              با ثبت درخواست پیش فاکتور دقیق ، درخواست شما برای کارشناسان ثبت و پس از بررسی آخرین قیمت ، فاکتور را تنظیم خواهند کرد .
+            </p>
           </div>
         </div>
       </div>
