--- a/cart.html
+++ b/cart.html
@@ -378,6 +378,25 @@
     </div>
   </div>
 
+  <!-- order Modal -->
+  <div class="modal fade p-sm-4" id="orderModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered max-w-497">
+      <div class="modal-content rounded-16">
+        <div class="modal-body p-4">
+          <img alt="img" src="img/Success Illustration.png" class="d-block mx-auto mt-2">
+          <p class="text-success3 text-center fs-20 font-bold mt-3 mb-2">سفارش شما با موفقیت ثبت شد</p>
+          <p class="fw-bold text-gray2 fs-14 text-center mb-4">
+              کد رهگیری سفارش شما:
+               ۲۳۴۵۶۷۸۹ 
+          </p>
+          <a class="d-flex align-items-center justify-content-center py-2 rounded-pill btn btn-outline-warning">
+           <p class="mb-0">سفارش های من</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- header -->
   <header class="py-4">
     <div class="container d-flex align-items-center justify-content-between gap-3">
@@ -952,48 +971,227 @@
     <section>
       <div class="container">
         <div class="row mx-0 g-4">
-          <div class="col-lg-9">
-            <div class="rounded-16 bg-white shadow-4 p-2 p-sm-4">
-
+          <div class="col-xl-9">
+            <div class="rounded-16 bg-white shadow-4 p-2 py-3 py-sm-4 p-sm-4 flex-column flex-lg-row d-flex align-items-end justify-content-between gap-4 gap-lg-2 mb-3">
+               <div class="flex-grow-1 w-100">
+                <h3 class="font-bold fs-20 text-main mb-4"> آریان فولاد</h3>
+                <div class="row mx-0 g-sm-1 gy-4 gx-1">
+                 <div class="col-md-3 col-6">
+                   <p class="fs-14 font-bold text-gray2 mb-3">آخرین نوسان قیمت</p>
+                   <div class="d-flex align-items-center gap-2">
+                    <div class="d-flex align-items-center gap-2">
+                      <img alt="icon" src="img/svg/Icon (5).svg">
+                     <p class="mb-0 text-danger font-bold">1%</p>
+                    </div>
+                    <div class="d-flex align-items-center gap-2">
+                      <p class="mb-0 text-danger font-bold">136 تـومـان</p>
+                    </div>
+                   </div>
+                 </div>
+                 <div class="col-md-3 col-6">
+                  <p class="fs-14 font-bold text-gray2 mb-3">آخرین بروزرسانی قیمت</p>
+                  <div class="d-flex align-items-center gap-2">
+                     <p class="mb-0 text-gray2 font-bold">17:20 - 1403/12/1</p>
+                  </div>
+                </div>
+                <div class="col-md-3 col-6">
+                  <p class="fs-14 font-bold text-gray2 mb-2">قیمت خرید کنونی</p>
+                  <div class="d-flex align-items-center gap-2">
+                     <p class="mb-0 text-main2 fs-24 font-bold">26,409</p>
+                     <p class="mb-0 text-main2 fs-14 font-bold">تومان</p>
+                  </div>
+                </div>
+                <div class="col-md-3 col-6">
+                  <p class="fs-14 font-bold text-gray2 mb-2">وزن تقریبی هر شاخه</p>
+                  <div class="d-flex align-items-center gap-2">
+                     <p class="mb-0 text-main2 fs-24 font-bold">2,000</p>
+                     <p class="mb-0 text-main2 fs-14 font-bold">کیلوگرم</p>
+                  </div>
+                </div>
+                </div>
+               </div>
+               <form class="flex-shrink-0 w-lg-100">
+                 <div class="d-flex align-items-center gap-3">
+                  <p class="mb-0 text-main fs-14 font-bold">واحد :</p>
+                  <select class="rounded-3 border-sky bg-main9 py-2 px-3">
+                    <option>شاخه</option>
+                    <option>شاخه</option>
+                  </select>
+                 </div>
+                 <div class="d-flex align-items-center mt-3 gap-2">
+                   <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
+                     <img alt="icon" src="img/svg/Icon (6).svg">
+                   </div>
+                   <input type="number" min="1" class="w-110 h-40 rounded-8 border-sky outline-none text-center text-main fs-20 font-bold" value="1">
+                   <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
+                    <img alt="icon" src="img/svg/Vector (2).svg">
+                  </div>
+                  <div class="me-2 w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
+                    <img alt="icon" src="img/svg/Icon(1).svg">
+                  </div>
+                 </div>
+                </form>
+            </div>
+            <div class="rounded-16 bg-white shadow-4 p-2 py-3 py-sm-4 p-sm-4 flex-column flex-lg-row d-flex align-items-end justify-content-between gap-4 gap-lg-2 mb-3">
+               <div class="flex-grow-1 w-100">
+                <h3 class="font-bold fs-20 text-main mb-4"> آریان فولاد</h3>
+                <div class="row mx-0 g-sm-1 gy-4 gx-1">
+                 <div class="col-md-3 col-6">
+                   <p class="fs-14 font-bold text-gray2 mb-3">آخرین نوسان قیمت</p>
+                   <div class="d-flex align-items-center gap-2">
+                    <div class="d-flex align-items-center gap-2">
+                      <img alt="icon" src="img/svg/Vector (3).svg">
+                     <p class="mb-0 text-success2 font-bold">1%</p>
+                    </div>
+                    <div class="d-flex align-items-center gap-2">
+                      <p class="mb-0 text-success2 font-bold">136 تـومـان</p>
+                    </div>
+                   </div>
+                 </div>
+                 <div class="col-md-3 col-6">
+                  <p class="fs-14 font-bold text-gray2 mb-3">آخرین بروزرسانی قیمت</p>
+                  <div class="d-flex align-items-center gap-2">
+                     <p class="mb-0 text-gray2 font-bold">17:20 - 1403/12/1</p>
+                  </div>
+                </div>
+                <div class="col-md-3 col-6">
+                  <p class="fs-14 font-bold text-gray2 mb-2">قیمت خرید کنونی</p>
+                  <div class="d-flex align-items-center gap-2">
+                     <p class="mb-0 text-main2 fs-24 font-bold">26,409</p>
+                     <p class="mb-0 text-main2 fs-14 font-bold">تومان</p>
+                  </div>
+                </div>
+                <div class="col-md-3 col-6">
+                  <p class="fs-14 font-bold text-gray2 mb-2">وزن تقریبی هر شاخه</p>
+                  <div class="d-flex align-items-center gap-2">
+                     <p class="mb-0 text-main2 fs-24 font-bold">2,000</p>
+                     <p class="mb-0 text-main2 fs-14 font-bold">کیلوگرم</p>
+                  </div>
+                </div>
+                </div>
+               </div>
+               <form class="flex-shrink-0 w-lg-100">
+                 <div class="d-flex align-items-center gap-3">
+                  <p class="mb-0 text-main fs-14 font-bold">واحد :</p>
+                  <select class="rounded-3 border-sky bg-main9 py-2 px-3">
+                    <option>شاخه</option>
+                    <option>شاخه</option>
+                  </select>
+                 </div>
+                 <div class="d-flex align-items-center mt-3 gap-2">
+                   <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
+                     <img alt="icon" src="img/svg/Icon (6).svg">
+                   </div>
+                   <input type="number" min="1" class="w-110 h-40 rounded-8 border-sky outline-none text-center text-main fs-20 font-bold" value="1">
+                   <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
+                    <img alt="icon" src="img/svg/Vector (2).svg">
+                  </div>
+                  <div class="me-2 w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
+                    <img alt="icon" src="img/svg/Icon(1).svg">
+                  </div>
+                 </div>
+                </form>
+            </div>
+            <div class="rounded-16 bg-white shadow-4 p-2 py-3 py-sm-4 p-sm-4 flex-column flex-lg-row d-flex align-items-end justify-content-between gap-4 gap-lg-2 mb-3">
+               <div class="flex-grow-1 w-100">
+                <h3 class="font-bold fs-20 text-main mb-4"> آریان فولاد</h3>
+                <div class="row mx-0 g-sm-1 gy-4 gx-1">
+                 <div class="col-md-3 col-6">
+                   <p class="fs-14 font-bold text-gray2 mb-3">آخرین نوسان قیمت</p>
+                   <div class="d-flex align-items-center gap-2">
+                    <div class="d-flex align-items-center gap-2">
+                      <img alt="icon" src="img/svg/Icon (5).svg">
+                     <p class="mb-0 text-danger font-bold">1%</p>
+                    </div>
+                    <div class="d-flex align-items-center gap-2">
+                      <p class="mb-0 text-danger font-bold">136 تـومـان</p>
+                    </div>
+                   </div>
+                 </div>
+                 <div class="col-md-3 col-6">
+                  <p class="fs-14 font-bold text-gray2 mb-3">آخرین بروزرسانی قیمت</p>
+                  <div class="d-flex align-items-center gap-2">
+                     <p class="mb-0 text-gray2 font-bold">17:20 - 1403/12/1</p>
+                  </div>
+                </div>
+                <div class="col-md-3 col-6">
+                  <p class="fs-14 font-bold text-gray2 mb-2">قیمت خرید کنونی</p>
+                  <div class="d-flex align-items-center gap-2">
+                     <p class="mb-0 text-main2 fs-24 font-bold">26,409</p>
+                     <p class="mb-0 text-main2 fs-14 font-bold">تومان</p>
+                  </div>
+                </div>
+                <div class="col-md-3 col-6">
+                  <p class="fs-14 font-bold text-gray2 mb-2">وزن تقریبی هر شاخه</p>
+                  <div class="d-flex align-items-center gap-2">
+                     <p class="mb-0 text-main2 fs-24 font-bold">2,000</p>
+                     <p class="mb-0 text-main2 fs-14 font-bold">کیلوگرم</p>
+                  </div>
+                </div>
+                </div>
+               </div>
+               <form class="flex-shrink-0 w-lg-100">
+                 <div class="d-flex align-items-center gap-3">
+                  <p class="mb-0 text-main fs-14 font-bold">واحد :</p>
+                  <select class="rounded-3 border-sky bg-main9 py-2 px-3">
+                    <option>شاخه</option>
+                    <option>شاخه</option>
+                  </select>
+                 </div>
+                 <div class="d-flex align-items-center mt-3 gap-2">
+                   <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
+                     <img alt="icon" src="img/svg/Icon (6).svg">
+                   </div>
+                   <input type="number" min="1" class="w-110 h-40 rounded-8 border-sky outline-none text-center text-main fs-20 font-bold" value="1">
+                   <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
+                    <img alt="icon" src="img/svg/Vector (2).svg">
+                  </div>
+                  <div class="me-2 w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
+                    <img alt="icon" src="img/svg/Icon(1).svg">
+                  </div>
+                 </div>
+                </form>
             </div>
           </div>
-          <div class="col-lg-3">
-            <div class="rounded-16 bg-white shadow-4 p-2 p-sm-4">
-              <p class="text-dark font-bold fs-18">خلاصه سبد استعلام شما</p>
-              <div class="mt-4 d-flex align-items-center justify-content-between gap-2 fw-bold text-gray">
-                <p class="mb-0 fs-14">جمع کل محصولات</p>
-                <p class="mb-0 font-bold">3,050,000</p>
-              </div>
-              <div class="mt-3 d-flex align-items-center justify-content-between gap-2 fw-bold text-gray">
-                <p class="mb-0 fs-14">ارزش افزوده محصولات</p>
-                <p class="mb-0 font-bold">274,500</p>
-              </div>
-              <div class="mt-4 text-success2 d-flex align-items-center justify-content-between gap-2 font-bold text-gray">
-                <p class="mb-0 ">جمع کل</p>
-                <div class="d-flex align-items-center gap-2">
-                  <p class="mb-0 fs-20">3,324,500</p>
-                  <div class="w-48 h-24 d-flex align-items-center justify-content-center bg-success2 fs-14 fw-bold text-white rounded-pill">تومان</div>
+          <div class="col-xl-3">
+            <div class="position-sticky top-27">
+              <div class="rounded-16 bg-white shadow-4 p-3 p-sm-4">
+                <p class="text-dark font-bold fs-18">خلاصه سبد استعلام شما</p>
+                <div class="mt-4 d-flex align-items-center justify-content-between gap-2 fw-bold text-gray">
+                  <p class="mb-0 fs-14">جمع کل محصولات</p>
+                  <p class="mb-0 font-bold">3,050,000</p>
                 </div>
-              </div>
-              <form class="border-top border-4 mt-4 pt-4">
-               <div class="d-flex align-items-center justify-content-between gap-3 border rounded-8 p-3 mb-3">
-                 <input class="font-bold flex-grow-1 fs-14 border-0 outline-none" placeholder="نام و نام خانوادگی">
-                 <img alt="icon" src="img/svg/Icon (3).svg">
+                <div class="mt-3 d-flex align-items-center justify-content-between gap-2 fw-bold text-gray">
+                  <p class="mb-0 fs-14">ارزش افزوده محصولات</p>
+                  <p class="mb-0 font-bold">274,500</p>
                 </div>
-                <div class="d-flex align-items-center justify-content-between gap-3 border rounded-8 p-3">
-                  <input class="font-bold flex-grow-1 fs-14 border-0 outline-none" placeholder="شماره همراه">
-                  <img alt="icon" src="img/svg/Icon (4).svg">
-                 </div>
-                 <button type="submit" class="border-0 mt-3 button-hover-2 w-100 h-56 rounded-8 bg-second text-white font-bold">
-                  <span>
-                    ثبت سفارش
-                  </span>
-                 </button>
-              </form>
+                <div class="mt-4 text-success2 d-flex align-items-center justify-content-between gap-2 font-bold text-gray">
+                  <p class="mb-0 ">جمع کل</p>
+                  <div class="d-flex align-items-center gap-2">
+                    <p class="mb-0 fs-20">3,324,500</p>
+                    <div class="w-48 h-24 d-flex align-items-center justify-content-center bg-success2 fs-14 fw-bold text-white rounded-pill">تومان</div>
+                  </div>
+                </div>
+                <form class="border-top border-4 mt-4 pt-4">
+                 <div class="d-flex align-items-center justify-content-between gap-3 border rounded-8 p-3 mb-3">
+                   <input class="font-bold flex-grow-1 fs-14 border-0 w-100 outline-none" placeholder="نام و نام خانوادگی">
+                   <img alt="icon" src="img/svg/Icon (3).svg">
+                  </div>
+                  <div class="d-flex align-items-center justify-content-between gap-3 border rounded-8 p-3">
+                    <input class="font-bold flex-grow-1 fs-14 border-0 w-100 outline-none" placeholder="شماره همراه">
+                    <img alt="icon" src="img/svg/Icon (4).svg">
+                   </div>
+                   <div data-bs-toggle="modal" data-bs-target="#orderModal" type="submit" class="border-0 mt-3 d-flex align-items-center justify-content-center button-hover-2 w-100 h-56 rounded-8 bg-second text-white font-bold">
+                    <span>
+                      ثبت سفارش
+                    </span>
+                  </div>
+                </form>
+              </div>
+              <p class="mb-0 text-gray2 lh-lg font-bold fs-14 mt-3">
+                با ثبت درخواست پیش فاکتور دقیق ، درخواست شما برای کارشناسان ثبت و پس از بررسی آخرین قیمت ، فاکتور را تنظیم خواهند کرد .
+              </p>
             </div>
-            <p class="mb-0 text-gray2 lh-lg font-bold fs-14 mt-3">
-              با ثبت درخواست پیش فاکتور دقیق ، درخواست شما برای کارشناسان ثبت و پس از بررسی آخرین قیمت ، فاکتور را تنظیم خواهند کرد .
-            </p>
           </div>
         </div>
       </div>
