--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>سبد خرید</title>
+  <title>مشخصات حساب کاربری</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/modules/data.js"></script>
@@ -373,25 +373,6 @@
               <img alt="img" src="img/Group 231.png" class="rounded-20 w-100 h-100">
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- order Modal -->
-  <div class="modal fade p-sm-4" id="orderModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered max-w-497">
-      <div class="modal-content rounded-16">
-        <div class="modal-body p-4">
-          <img alt="img" src="img/Success Illustration.png" class="d-block mx-auto mt-2 img-fluid">
-          <p class="text-success3 text-center fs-20 font-bold mt-3 mb-2">سفارش شما با موفقیت ثبت شد</p>
-          <p class="fw-bold text-gray2 fs-14 text-center mb-4">
-            کد رهگیری سفارش شما:
-            ۲۳۴۵۶۷۸۹
-          </p>
-          <a class="d-flex align-items-center justify-content-center py-2 rounded-pill btn btn-outline-warning">
-            <p class="mb-0">سفارش های من</p>
-          </a>
         </div>
       </div>
     </div>
@@ -1031,262 +1012,71 @@
   <!-- main -->
   <main class="position-relative">
 
-    <!-- empty cart -->
-    <section class="mt-2 py-3 d-none">
-      <div class="container">
-        <div class="rounded-16 bg-white shadow-4 p-2 p-sm-4 pb-5 d-flex align-items-center justify-content-center">
-          <div class="text-center w-100 my-5">
-            <img alt="img" src="img/undraw_empty_cart_co35 1.png" class="img-fluid">
-            <p class="font-bold text-main2 fs-32 mt-4 mb-2 fs-sm-24">محصولی در سبد خرید شما نیست !</p>
-            <a class="text-second fs-20 font-bold">مشاهده محصولات</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section>
       <div class="container">
-        <div class="row mx-0 g-4">
-          <div class="col-xl-9">
-            <div
-              class="rounded-16 bg-white shadow-4 p-2 py-3 py-sm-4 p-sm-4 flex-column flex-lg-row d-flex align-items-end justify-content-between gap-4 gap-lg-2 mb-3">
-              <div class="flex-grow-1 w-100">
-                <h3 class="font-bold fs-20 text-main mb-4"> آریان فولاد</h3>
-                <div class="row mx-0 g-sm-1 gy-4 gy-sm-4 gx-1">
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-3">آخرین نوسان قیمت</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <div class="d-flex align-items-center gap-2">
-                        <img alt="icon" src="img/svg/Icon (5).svg">
-                        <p class="mb-0 text-danger font-bold">1%</p>
-                      </div>
-                      <div class="d-flex align-items-center gap-2">
-                        <p class="mb-0 text-danger font-bold">136 تـومـان</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-3">آخرین بروزرسانی قیمت</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <p class="mb-0 text-gray2 font-bold">17:20 - 1403/12/1</p>
-                    </div>
-                  </div>
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-2">قیمت خرید کنونی</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <p class="mb-0 text-main2 fs-24 font-bold">26,409</p>
-                      <p class="mb-0 text-main2 fs-14 font-bold">تومان</p>
-                    </div>
-                  </div>
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-2">وزن تقریبی هر شاخه</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <p class="mb-0 text-main2 fs-24 font-bold">2,000</p>
-                      <p class="mb-0 text-main2 fs-14 font-bold">کیلوگرم</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <form class="flex-shrink-0 w-lg-100">
-                <div class="d-flex align-items-center gap-3">
-                  <p class="mb-0 text-main fs-14 font-bold">واحد :</p>
-                  <select class="rounded-3 border-sky bg-main9 py-2 px-3">
-                    <option>شاخه</option>
-                    <option>شاخه</option>
-                  </select>
-                </div>
-                <div class="d-flex align-items-center mt-3 gap-2">
-                  <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
-                    <img alt="icon" src="img/svg/Icon (6).svg">
-                  </div>
-                  <input type="number" min="1"
-                    class="w-110 h-40 rounded-8 border-sky outline-none text-center text-main fs-20 font-bold"
-                    value="1">
-                  <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
-                    <img alt="icon" src="img/svg/Vector (2).svg">
-                  </div>
-                  <div
-                    class="me-2 w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
-                    <img alt="icon" src="img/svg/Icon(1).svg">
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div
-              class="rounded-16 bg-white shadow-4 p-2 py-3 py-sm-4 p-sm-4 flex-column flex-lg-row d-flex align-items-end justify-content-between gap-4 gap-lg-2 mb-3">
-              <div class="flex-grow-1 w-100">
-                <h3 class="font-bold fs-20 text-main mb-4"> آریان فولاد</h3>
-                <div class="row mx-0 g-sm-1 gy-4 gy-sm-4 gx-1">
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-3">آخرین نوسان قیمت</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <div class="d-flex align-items-center gap-2">
-                        <img alt="icon" src="img/svg/Vector (3).svg">
-                        <p class="mb-0 text-success2 font-bold">1%</p>
-                      </div>
-                      <div class="d-flex align-items-center gap-2">
-                        <p class="mb-0 text-success2 font-bold">136 تـومـان</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-3">آخرین بروزرسانی قیمت</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <p class="mb-0 text-gray2 font-bold">17:20 - 1403/12/1</p>
-                    </div>
-                  </div>
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-2">قیمت خرید کنونی</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <p class="mb-0 text-main2 fs-24 font-bold">26,409</p>
-                      <p class="mb-0 text-main2 fs-14 font-bold">تومان</p>
-                    </div>
-                  </div>
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-2">وزن تقریبی هر شاخه</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <p class="mb-0 text-main2 fs-24 font-bold">2,000</p>
-                      <p class="mb-0 text-main2 fs-14 font-bold">کیلوگرم</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <form class="flex-shrink-0 w-lg-100">
-                <div class="d-flex align-items-center gap-3">
-                  <p class="mb-0 text-main fs-14 font-bold">واحد :</p>
-                  <select class="rounded-3 border-sky bg-main9 py-2 px-3">
-                    <option>شاخه</option>
-                    <option>شاخه</option>
-                  </select>
-                </div>
-                <div class="d-flex align-items-center mt-3 gap-2">
-                  <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
-                    <img alt="icon" src="img/svg/Icon (6).svg">
-                  </div>
-                  <input type="number" min="1"
-                    class="w-110 h-40 rounded-8 border-sky outline-none text-center text-main fs-20 font-bold"
-                    value="1">
-                  <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
-                    <img alt="icon" src="img/svg/Vector (2).svg">
-                  </div>
-                  <div
-                    class="me-2 w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
-                    <img alt="icon" src="img/svg/Icon(1).svg">
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div
-              class="rounded-16 bg-white shadow-4 p-2 py-3 py-sm-4 p-sm-4 flex-column flex-lg-row d-flex align-items-end justify-content-between gap-4 gap-lg-2 mb-3">
-              <div class="flex-grow-1 w-100">
-                <h3 class="font-bold fs-20 text-main mb-4"> آریان فولاد</h3>
-                <div class="row mx-0 g-sm-1 gy-4 gy-sm-4 gx-1">
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-3">آخرین نوسان قیمت</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <div class="d-flex align-items-center gap-2">
-                        <img alt="icon" src="img/svg/Icon (5).svg">
-                        <p class="mb-0 text-danger font-bold">1%</p>
-                      </div>
-                      <div class="d-flex align-items-center gap-2">
-                        <p class="mb-0 text-danger font-bold">136 تـومـان</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-3">آخرین بروزرسانی قیمت</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <p class="mb-0 text-gray2 font-bold">17:20 - 1403/12/1</p>
-                    </div>
-                  </div>
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-2">قیمت خرید کنونی</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <p class="mb-0 text-main2 fs-24 font-bold">26,409</p>
-                      <p class="mb-0 text-main2 fs-14 font-bold">تومان</p>
-                    </div>
-                  </div>
-                  <div class="col-md-3 col-6">
-                    <p class="fs-14 font-bold text-gray2 mb-2">وزن تقریبی هر شاخه</p>
-                    <div class="d-flex align-items-center gap-2">
-                      <p class="mb-0 text-main2 fs-24 font-bold">2,000</p>
-                      <p class="mb-0 text-main2 fs-14 font-bold">کیلوگرم</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <form class="flex-shrink-0 w-lg-100">
-                <div class="d-flex align-items-center gap-3">
-                  <p class="mb-0 text-main fs-14 font-bold">واحد :</p>
-                  <select class="rounded-3 border-sky bg-main9 py-2 px-3">
-                    <option>شاخه</option>
-                    <option>شاخه</option>
-                  </select>
-                </div>
-                <div class="d-flex align-items-center mt-3 gap-2">
-                  <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
-                    <img alt="icon" src="img/svg/Icon (6).svg">
-                  </div>
-                  <input type="number" min="1"
-                    class="w-110 h-40 rounded-8 border-sky outline-none text-center text-main fs-20 font-bold"
-                    value="1">
-                  <div class="w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
-                    <img alt="icon" src="img/svg/Vector (2).svg">
-                  </div>
-                  <div
-                    class="me-2 w-40 h-40 cursor rounded-8 border-sky d-flex align-items-center justify-content-center">
-                    <img alt="icon" src="img/svg/Icon(1).svg">
-                  </div>
-                </div>
-              </form>
-            </div>
+        <div class="rounded-16 bg-white shadow-4 px-4 py-5">
+          <div>
+            <h1 class="font-bold text-dark fs-20">مشخصات حساب کاربری</h1>
           </div>
-          <div class="col-xl-3">
-            <div class="position-sticky top-27">
-              <div class="rounded-16 bg-white shadow-4 p-3 p-sm-4">
-                <p class="text-dark font-bold fs-18">خلاصه سبد استعلام شما</p>
-                <div class="mt-4 d-flex align-items-center justify-content-between gap-2 fw-bold text-gray">
-                  <p class="mb-0 fs-14">جمع کل محصولات</p>
-                  <p class="mb-0 font-bold">3,050,000</p>
-                </div>
-                <div class="mt-3 d-flex align-items-center justify-content-between gap-2 fw-bold text-gray">
-                  <p class="mb-0 fs-14">ارزش افزوده محصولات</p>
-                  <p class="mb-0 font-bold">274,500</p>
-                </div>
-                <div
-                  class="mt-4 text-success2 d-flex align-items-center justify-content-between gap-2 font-bold text-gray">
-                  <p class="mb-0 ">جمع کل</p>
-                  <div class="d-flex align-items-center gap-2">
-                    <p class="mb-0 fs-20">3,324,500</p>
-                    <div
-                      class="w-48 h-24 d-flex align-items-center justify-content-center bg-success2 fs-14 fw-bold text-white rounded-pill">
-                      تومان</div>
-                  </div>
-                </div>
-                <form class="border-top border-4 mt-4 pt-4">
-                  <div class="d-flex align-items-center justify-content-between gap-3 border rounded-8 p-3 mb-3">
-                    <input class="font-bold flex-grow-1 fs-14 border-0 w-100 outline-none"
-                      placeholder="نام و نام خانوادگی">
-                    <img alt="icon" src="img/svg/Icon (3).svg">
-                  </div>
-                  <div class="d-flex align-items-center justify-content-between gap-3 border rounded-8 p-3">
-                    <input class="font-bold flex-grow-1 fs-14 border-0 w-100 outline-none" placeholder="شماره همراه">
-                    <img alt="icon" src="img/svg/Icon (4).svg">
-                  </div>
-                  <div data-bs-toggle="modal" data-bs-target="#orderModal" type="submit"
-                    class="border-0 mt-3 d-flex align-items-center justify-content-center button-hover-2 w-100 h-56 rounded-8 bg-second text-white font-bold">
-                    <span>
-                      ثبت سفارش
-                    </span>
-                  </div>
-                </form>
+          <form class="row g-4 mt-3">
+            <div class="col-md-4">
+              <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                <input placeholder="نام و نام خانوادگی" class="bg-transparent border-0 outline-none w-100 flex-grow-1 fw-bold fs-14">
+                <img alt="icon" src="img/svg/user-edit.svg">
               </div>
-              <p class="mb-0 text-gray2 lh-lg font-bold fs-14 mt-3">
-                با ثبت درخواست پیش فاکتور دقیق ، درخواست شما برای کارشناسان ثبت و پس از بررسی آخرین قیمت ، فاکتور را
-                تنظیم خواهند کرد .
-              </p>
             </div>
-          </div>
+            <div class="col-md-4">
+              <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                <input placeholder="شماره همراه" class="bg-transparent border-0 outline-none w-100 flex-grow-1 fw-bold fs-14">
+                <img alt="icon" src="img/svg/call-calling (2).svg">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                <input placeholder="ایمیل" class="bg-transparent border-0 outline-none w-100 flex-grow-1 fw-bold fs-14">
+                <img alt="icon" src="img/svg/sms.svg">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                <select class="form-control p-0 bg-transparent border-0 w-100 flex-grow-1 fw-bold fs-14">
+                  <option>استان</option>
+                  <option>تهران</option>
+                  <option>لرستان</option>
+                  <option>کردستان</option>
+                </select>
+                <img alt="icon" src="img/svg/map.svg">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                <select class="form-control p-0 bg-transparent border-0 w-100 flex-grow-1 fw-bold fs-14">
+                  <option>شهر</option>
+                  <option>تهران</option>
+                  <option>خرم آباد</option>
+                  <option>سنندج</option>
+                </select>
+                <img alt="icon" src="img/svg/map (2).svg">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                <input placeholder="کد پستی" class="bg-transparent border-0 outline-none w-100 flex-grow-1 fw-bold fs-14">
+                <img alt="icon" src="img/svg/barcode.svg">
+              </div>
+            </div>
+            <div class="col-md-8">
+              <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                <input placeholder="آدرس شما" class="bg-transparent border-0 outline-none w-100 flex-grow-1 fw-bold fs-14">
+                <img alt="icon" src="img/svg/location.svg">
+              </div>
+            </div>
+            <div class="col-md-4">
+                <button class="border-0 d-flex align-items-center justify-content-center h-60 w-100 fs-sm-14 px-sm-5 px-2 button-hover-2 gap-2 rounded-10 bg-second text-white fw-bold">
+                  <p class="mb-0">ذخیره اطلاعات</p>
+                </button>
+            </div>
+          </form>
         </div>
       </div>
     </section>
