--- a/single-product.html
+++ b/single-product.html
@@ -378,6 +378,29 @@
     </div>
   </div>
 
+   <!-- add product Modal -->
+   <div class="modal fade p-sm-4" id="addproductModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered max-w-714">
+      <div class="modal-content rounded-20">
+        <div class="modal-body p-4">
+          <div class="d-flex align-items-center justify-content-between gap-2">
+            <p class="mb-0 text-main3 fw-bold fs-14">مقدار مورد نظرتان را مشخص نمایید</p>
+            <img data-bs-dismiss="modal" class="cursor" alt="icon" src="img/svg/Icon (7).svg">
+          </div>
+          <div class="d-flex align-items-center mt-4 overflow-hidden border-sky rounded-16">
+            <div class="w-70 h-70 border-l-sky cursor d-flex align-items-center justify-content-center">
+              <img alt="icon" src="img/svg/Icon (6).svg" class="w-16">
+            </div>
+            <input type="number" min="1" class="flex-grow-1 h-70 border-0 outline-none px-4 text-main fs-32 font-bold" value="1">
+            <div class="w-70 h-70 border-r-sky cursor d-flex align-items-center justify-content-center">
+              <img alt="icon" src="img/svg/Vector (2).svg" class="w-16">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="ld-form d-none">
     <div class="ld-row">
       <label class="ld-label">
@@ -1038,7 +1061,7 @@
                     <p class="mb-0 font-bold text-main">۱۴۰۳.۰۶.۱۰ - ۱۸:۰۱</p>
                   </div>
                 </div>
-                <a class="bg-main rounded-8 text-white button-hover-1 w-sm-100 flex-shrink-0 font-bold fs-14 py-3 px-sm-5 px-3 d-flex align-items-center justify-content-center gap-2">
+                <a data-bs-toggle="modal" data-bs-target="#addproductModal" class="bg-main rounded-8 text-white button-hover-1 w-sm-100 flex-shrink-0 font-bold fs-14 py-3 px-sm-5 px-3 d-flex align-items-center justify-content-center gap-2">
                   <p class="mb-0">ثبت سفارش محصول</p>
                   <img alt="icon" src="img/svg/arrow-left.svg">
                 </a>
