--- a/single-product.html
+++ b/single-product.html
@@ -382,21 +382,50 @@
    <div class="modal fade p-sm-4" id="addproductModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered max-w-714">
       <div class="modal-content rounded-20">
-        <div class="modal-body p-4">
+        <form class="modal-body p-4">
           <div class="d-flex align-items-center justify-content-between gap-2">
             <p class="mb-0 text-main3 fw-bold fs-14">مقدار مورد نظرتان را مشخص نمایید</p>
             <img data-bs-dismiss="modal" class="cursor" alt="icon" src="img/svg/Icon (7).svg">
           </div>
-          <div class="d-flex align-items-center mt-4 overflow-hidden border-sky rounded-16">
-            <div class="w-70 h-70 border-l-sky cursor d-flex align-items-center justify-content-center">
+          <div class="d-flex align-items-center mt-4 overflow-hidden border-sky rounded-16 h-70">
+            <div class="w-70 h-70 flex-shrink-0 border-l-sky cursor d-flex align-items-center justify-content-center">
               <img alt="icon" src="img/svg/Icon (6).svg" class="w-16">
             </div>
-            <input type="number" min="1" class="flex-grow-1 h-70 border-0 outline-none px-4 text-main fs-32 font-bold" value="1">
-            <div class="w-70 h-70 border-r-sky cursor d-flex align-items-center justify-content-center">
+            <div class="w-100 px-sm-4 px-2 d-flex align-items-center justify-content-between gap-sm-4 gap-2 h-100">
+              <input type="number" min="1" class="w-100 h-70 border-0 outline-none text-main fs-sm-20 fs-32 font-bold" value="1">
+              <select class="rounded-3 border-sky bg-main9 py-2 px-3">
+                <option>شاخه</option>
+                <option>شاخه</option>
+              </select>
+            </div>
+            <div class="w-70 h-70 flex-shrink-0 border-r-sky cursor d-flex align-items-center justify-content-center">
               <img alt="icon" src="img/svg/Vector (2).svg" class="w-16">
             </div>
           </div>
-        </div>
+          <p class="text-main3 lh-lg fw-bold mt-3 mb-4 text-justify">
+            وزن هر شاخه 8 کیلوگرم، 250 شاخه در هر بندل، وزن هر بندل 2000 کیلوگرم، 12 بندل در هر ظرفیت، وزن هر ظرفیت 24000 کیلوگرم
+          </p>
+          <div class="mb-4 d-flex align-items-center justify-content-between gap-3 fs-14 fw-bold">
+            <p class="mb-0 flex-shrink-0">وزن تقریبی</p>
+            <span class="d-block line w-100 flex-grow-1"></span>
+            <p class="mb-0 flex-shrink-0"><span class="fs-16 font-bold">16</span> کیلو</p>
+          </div>
+          <div class="mb-4 d-flex align-items-center justify-content-between gap-3 fs-14 fw-bold">
+            <p class="mb-0 flex-shrink-0">قیمت کل</p>
+            <span class="d-block line w-100 flex-grow-1"></span>
+            <p class="mb-0 flex-shrink-0"><span class="fs-16 font-bold">422,544</span> تومان</p>
+          </div>
+          <div class="flex-column flex-sm-row w-100 flex-grow-1 d-flex align-items-center justify-content-between gap-3 fw-bold">
+           <div class="text-main">
+            <p class="fs-14 mb-1">قیمت هرکیلو : </p>
+            <p class="mb-0 flex-shrink-0"><span class="fs-24 font-bold">26,409</span> تومان</p>
+           </div>
+           <button type="submit" class="w-sm-100 border-0 bg-second rounded-8 text-white button-hover-2 font-bold fs-18 py-3 px-sm-5 px-3 d-flex align-items-center justify-content-center gap-2">
+            <p class="mb-0">ثبت در سبد خرید</p>
+            <img alt="icon" src="img/svg/bag (2).svg">
+           </button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
