--- a/filters.html
+++ b/filters.html
@@ -1344,6 +1344,19 @@
                   </a>
                 </div>
               </div>
+              <div class="rounded-10 shadow-4 p-3 mt-4">
+                <h4 class="fs-18 font-bold text-gray text-center mt-2">کارشناسان واحد پروفیل کنگره</h4>
+                <img alt="img" src="img/image (2).png" class="img-fluid w-100 rounded-16 mt-4">
+                <p class="fs-16 fw-bold text-gray text-center my-2">بهنوش براتی هفدانی</p>
+                <p class="fs-14 fw-bold text-main2 text-center">کارشناس فروش میلگرد</p>
+                <div class="fs-14 d-flex align-items-center justify-content-between gap-2 border-top pt-3">
+                  <div class="d-flex align-items-center gap-2">
+                    <p class="mb-0 text-gray fw-bold">واتساپ</p>
+                    <img alt="icon" src="img/svg/SVG.svg">
+                  </div>
+                  <a class="bg-second text-white fw-bold rounded-8 py-1 px-3 button-hover-2"><p class="mb-0">021-3343255</p></a>
+                </div>
+               </div>
             </div>
           </div>
           <div class="col-lg-9 col-12">
